Cleanup Foursquare code

--- a/Toronto Capstone .ipynb
+++ b/Toronto Capstone .ipynb
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1720,14 +1720,14 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: ULNSFT4QOPZGUX51FNT2W0B4RCWLTF3PZWT1XQ5JTHIYG4OC\n",
-      "CLIENT_SECRET:2FFFFUXOV5FSS2UA0O5SBHH55KJY5SYVGJ242QSZKWPY4RVI\n"
+      "CLIENT_ID: your Foursquare ID\n",
+      "CLIENT_SECRET:your Foursquare Secret\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'ULNSFT4QOPZGUX51FNT2W0B4RCWLTF3PZWT1XQ5JTHIYG4OC' # your Foursquare ID\n",
-    "CLIENT_SECRET = '2FFFFUXOV5FSS2UA0O5SBHH55KJY5SYVGJ242QSZKWPY4RVI' # your Foursquare Secret\n",
+    "CLIENT_ID = 'your Foursquare ID' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'your Foursquare Secret' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
