Added separator between week 1 and week 2

--- a/Tornados.ipynb
+++ b/Tornados.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Capstone Project Week 1 Assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Tornados and Trailer Parks"
    ]
   },
@@ -19,14 +26,16 @@
     "1950 to 2015.  So it occurred to me that this data might be useful in determining the best place to \n",
     "build a trailer park in the US.\n",
     "\n",
-    "Now I have come to understand from reputable people that tornados are spawned as a result of pre-\n",
+    "Now I have come to understand from reputable sources that tornados are spawned as a result of pre-\n",
     "existing conditions.  They don't actually get to choose where they are going to touchdown.  So they\n",
     "can't in a targeted way just drop in on a specific trailer park.\n",
     "\n",
     "Therefore, there must exist some optimal location to build a trailer park which is removed from the\n",
     "areas where tornados frequently spawn.\n",
     "\n",
-    "Our goal in this effort is to find that sweet spot if you will."
+    "Our goal in this effort is to find that sweet spot if.  This information should prove invaluable not \n",
+    "only to developers who are looking to build new trailer parks, but to trailer owners who are looking \n",
+    "for a place to park them."
    ]
   },
   {
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +238,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +471,7 @@
        "4    0.0  37.60 -90.68  37.63 -90.65  2.3  300  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +500,7 @@
        "(60114, 20)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +638,7 @@
        "4  37.60 -90.68"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -650,13 +659,53 @@
        "(60114, 2)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "latlong.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we now have two datasets.  The first one contains statistical information on all the \n",
+    "tornados that ocurred in the US between 1950 and 2015.  The second dataset contains\n",
+    "only the starting latitude and longitude for each tornado which will be helpful for\n",
+    "plotting points on a map.\n",
+    "\n",
+    "In week 2 we will pare down the number of events to something more suitable for\n",
+    "plotting on a map by using a k-means model to group each tornado into clusters of \n",
+    "tornados that spawned at or near the same points.  We will then find and plot the \n",
+    "centers of those clusters instead of plotting each individual tornado.\n",
+    "\n",
+    "This data will be useful information for anybody looking to build a trailer park,\n",
+    "but could also be a life saver for people who own trailers and are looking for \n",
+    "places to park them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End of Capstone Project Week 1 Assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Capstone Project Week 2 Assignment"
    ]
   },
   {
