--- a/Tornados.ipynb
+++ b/Tornados.ipynb
@@ -2731,7 +2731,7 @@
     "Phone: (775) 482-3737\n",
     "\n",
     "So there you have it campers!  Enjoy a carefree tomorrow in beautiful Tonapah.  Just \n",
-    "watch for the rattle snakes...\n"
+    "watch out for the rattle snakes...\n"
    ]
   },
   {
